tests/typecheck/bad/bad_assign2.scilexp
let _bal = Uint128 0 in
_bal
